<resources>
  <string name="app_name">Octo Members</string>
  <string name="team_hint">Enter a team name</string>
  <string name="team_button">SHOW MEMBERS</string>
  <string name="default_team_name">raywenderlich</string>
  <string name="error_retrieving_team">Error retrieving team</string>
  <string name="error_retrieving_member">Error retrieving member</string>
  <string name="error_team_name_empty">Team name cannot be empty</string>
  <string name="team_member_avatar">team member avatar</string>
  <string name="label_name">name: </string>
  <string name="label_username">username: </string>
  <string name="label_company">company: </string>
  <string name="label_email">email: </string>
  <string name="label_type">type: </string>
  <string name="empty_members">No members found for %1$s.</string>
</resources>
