<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.raywenderlich.android.octomembers.ui.member.MemberActivity">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/horizontalGuideline"
        android:background="@color/colorAccent" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/horizontalGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorPrimary"
        />

    <ImageView
        android:id="@+id/memberAvatar"
        android:layout_width="@dimen/detail_avatar_size"
        android:layout_height="@dimen/detail_avatar_size"
        android:contentDescription="@string/team_member_avatar"
        android:padding="@dimen/padding_standard"
        app:layout_constraintBottom_toTopOf="@id/horizontalGuideline"
        app:layout_constraintEnd_toStartOf="@id/verticalGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp"
        tools:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/memberName"
        style="@style/member_name"
        app:layout_constraintBottom_toTopOf="@id/horizontalGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/verticalGuideline"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="160dp"
        tools:text="FirstName LastName" />

    <TextView
        android:id="@+id/memberUsernameLabel"
        style="@style/member_label"
        android:text="@string/label_username"
        app:layout_constraintBottom_toTopOf="@id/memberCompanyLabel"
        app:layout_constraintEnd_toStartOf="@id/infoVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/horizontalGuideline"
        app:layout_constraintVertical_chainStyle="packed"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/memberCompanyLabel"
        style="@style/member_label"
        android:text="@string/label_company"
        app:layout_constraintBottom_toTopOf="@id/memberEmailLabel"
        app:layout_constraintEnd_toStartOf="@id/infoVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/memberUsernameLabel"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/memberEmailLabel"
        style="@style/member_label"
        android:text="@string/label_email"
        app:layout_constraintBottom_toTopOf="@id/memberTypeLabel"
        app:layout_constraintEnd_toStartOf="@id/infoVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/memberCompanyLabel"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/memberTypeLabel"
        style="@style/member_label"
        android:text="@string/label_type"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/infoVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/memberEmailLabel"
        tools:text="@string/label_type" />

    <TextView
        android:id="@+id/memberUsername"
        style="@style/member_info"
        app:layout_constraintBottom_toTopOf="@id/memberCompany"
        app:layout_constraintStart_toStartOf="@id/verticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/horizontalGuideline"
        app:layout_constraintVertical_chainStyle="packed"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/memberCompany"
        style="@style/member_info"
        app:layout_constraintBottom_toTopOf="@id/memberEmail"
        app:layout_constraintStart_toStartOf="@id/verticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/memberUsername"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/memberEmail"
        style="@style/member_info"
        app:layout_constraintBottom_toTopOf="@id/memberType"
        app:layout_constraintStart_toStartOf="@id/verticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/memberCompany"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/memberType"
        style="@style/member_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/verticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/memberEmail"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/infoVerticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>
